
  OPTIMIZATIONS

  BUG FIXES
    HADOOP-11730. Regression: s3n read failure recovery broken.
    (Takenori Sato via stevel)

    HADOOP-11802. DomainSocketWatcher thread terminates sometimes after there
    is an I/O error during requestShortCircuitShm (cmccabe)

Release 2.7.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-11490. Expose truncate API via FileSystem and shell command.
    (Milan Desai via shv)

    HADOOP-11510. Expose truncate API via FileContext. (yliu)

  IMPROVEMENTS

    HADOOP-11579. Documentation for truncate. (shv)

    HADOOP-11441. Hadoop-azure: Change few methods scope to public.
    (Shashank Khandelwal via cnauroth)

    HADOOP-9137. Support connection limiting in IPC server (kihwal)

    HADOOP-11498. Bump the version of HTrace to 3.1.0-incubating (Masatake
    Iwasaki via Colin P. McCabe)

    HADOOP-11442. hadoop-azure: Create test jar.
    (Shashank Khandelwal via cnauroth)

    HADOOP-11648. Set DomainSocketWatcher thread name explicitly.
    (Liang Xie via ozawa)

    HADOOP-11430. Add GenericTestUtils#disableLog, GenericTestUtils#setLogLevel
    (cmccabe)

    HADOOP-11390 Metrics 2 ganglia provider to include hostname in
    unresolved address problems. (Varun Saxena via stevel)

  OPTIMIZATIONS

    HADOOP-11238. Update the NameNode's Group Cache in the background when
    possible (Chris Li via Colin P. McCabe)

  BUG FIXES

    HADOOP-11595. Add default implementation for AbstractFileSystem#truncate. (yliu)

    HADOOP-11368. Fix SSLFactory truststore reloader thread leak in
    KMSClientProvider. (Arun Suresh via wang)

    HADOOP-11333. Fix deadlock in DomainSocketWatcher when the notification pipe
    is full. (zhaoyunjiong via cmccabe)

    HADOOP-11710. Make CryptoOutputStream behave like DFSOutputStream wrt
    synchronization. (Sean Busbey via yliu)

    HADOOP-11604. Prevent ConcurrentModificationException while closing domain
    sockets during shutdown of DomainSocketWatcher thread. (cnauroth)
