@@ -16,5 +16,5 @@
 
 set HADOOP_JOB_HISTORYSERVER_HEAPSIZE=1000
 
-set HADOOP_MAPRED_ROOT_LOGGER=INFO,RFA
+set HADOOP_MAPRED_ROOT_LOGGER=%HADOOP_LOGLEVEL%,RFA
 
