@@ -26,7 +26,7 @@ Yarn Commands
   without any arguments prints the description for all commands.
 
 ------
-Usage: yarn [--config confdir] COMMAND
+Usage: yarn [--config confdir] [--loglevel loglevel] COMMAND
 ------
 
   Yarn has an option parsing framework that employs parsing generic options as
@@ -37,6 +37,9 @@ Usage: yarn [--config confdir] COMMAND
 *---------------+--------------+
 | --config confdir | Overwrites the default Configuration directory. Default
 |                  | is $\{HADOOP_PREFIX\}/conf.
+*---------------+--------------+
+| --loglevel loglevel | Overwrites the log level. Valid log levels are FATAL,
+|                     | ERROR, WARN, INFO, DEBUG, and TRACE. Default is INFO.
 *---------------+--------------+
 | COMMAND COMMAND_OPTIONS | Various commands with their options are described
 |                         | in the following sections. The commands have been
